--- a/diy/subconvert_fallback_diy.ini
+++ b/diy/subconvert_fallback_diy.ini
@@ -28,8 +28,8 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`🇭🇰 香港自选`🇺🇸 美国自选`🇸🇬 新加坡自选`.*
 
 ;用于自定义重命名的选项 会覆盖 主程序目录中的配置文件 里的内容
-rename=!!GROUPID=0!!(^.*$)@IPLC.VIP-$1
-rename=!!GROUPID=1!!(^.*$)@AmyTelecom-$1
+#rename=!!GROUPID=0!!(^.*$)@IPLC.VIP-$1
+#rename=!!GROUPID=1!!(^.*$)@AmyTelecom-$1
 ;rename=\(?((x|X)?(\d+)(\.?\d+)?)((\s?倍率?)|(x|X))\)?@$1x
 
 enable_rule_generator=true
