--- a/diy/subconvert_fallback_diy_sk163.ini
+++ b/diy/subconvert_fallback_diy_sk163.ini
@@ -11,6 +11,12 @@
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]MATCH
 
+;用于自定义组的选项 会覆盖 主程序目录中的配置文件 里的内容
+;使用以下模式生成 Clash 代理组，带有 "[]" 前缀将直接添加
+;Format: Group_Name`select`Rule_1`Rule_2`...
+;        Group_Name`url-test|fallback|load-balance`Rule_1`Rule_2`...`test_url`interval[,timeout][,tolerance]
+;Rule with "[]" prefix will be added directly.
+
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 custom_proxy_group=🇭🇰 香港自选`fallback`!!GROUPID=0!!(hk|港)`http://www.gstatic.com/generate_204`180,5
 custom_proxy_group=🇺🇸 美国自选`fallback`!!GROUPID=0!!(us|美)`http://www.gstatic.com/generate_204`180,5
