--- a/diy/subconvert_fallback_diy.ini
+++ b/diy/subconvert_fallback_diy.ini
@@ -19,7 +19,7 @@ custom_proxy_group=🇷🇺 俄罗斯自选`fallback`!!GROUPID=0!!(ru|俄)`http:
 custom_proxy_group=🇹🇷 土耳其自选`fallback`!!GROUPID=0!!(tr|土)`http://www.gstatic.com/generate_204`180,5
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`🇭🇰 香港自选`🇺🇸 美国自选`🇸🇬 新加坡自选`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]🇭🇰 香港自选`[]🇺🇸 美国自选`[]🇸🇬 新加坡自选`.*
 
 ;用于自定义重命名的选项 会覆盖 主程序目录中的配置文件 里的内容
 rename=!!GROUPID=0!!(^.*$)@IPLC.VIP-$1
