--- a/diy/subconvert_fallback_diy.ini
+++ b/diy/subconvert_fallback_diy.ini
@@ -8,7 +8,7 @@
 #ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
 #ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaDomain.list
 #ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,[]GEOIP,CN
+#ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]MATCH
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
