--- a/diy/subconvert_fallback_diy_sk163.ini
+++ b/diy/subconvert_fallback_diy_sk163.ini
@@ -8,7 +8,7 @@
 #ruleset=🚀 节点选择,rules/ACL4SSR/Clash/ProxyLite.list
 #ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaDomain.list
 #ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,[]GEOIP,CN
+#ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]MATCH
 
 ;用于自定义组的选项 会覆盖 主程序目录中的配置文件 里的内容
@@ -17,15 +17,17 @@ ruleset=🐟 漏网之鱼,[]MATCH
 ;        Group_Name`url-test|fallback|load-balance`Rule_1`Rule_2`...`test_url`interval[,timeout][,tolerance]
 ;Rule with "[]" prefix will be added directly.
 
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
-custom_proxy_group=🇭🇰 香港自选`fallback`!!GROUPID=0!!(hk|港)`http://www.gstatic.com/generate_204`180,5
-custom_proxy_group=🇺🇸 美国自选`fallback`!!GROUPID=0!!(us|美)`http://www.gstatic.com/generate_204`180,5
-custom_proxy_group=🇸🇬 新加坡自选`fallback`!!GROUPID=0!!(sg|新)`http://www.gstatic.com/generate_204`180,5
-custom_proxy_group=🇷🇺 俄罗斯自选`fallback`!!GROUPID=0!!(ru|俄)`http://www.gstatic.com/generate_204`180,5
-custom_proxy_group=🇹🇷 土耳其自选`fallback`!!GROUPID=0!!(tr|土)`http://www.gstatic.com/generate_204`180,5
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`🇭🇰 香港自选`🇺🇸 美国自选`🇸🇬 新加坡自选`.*
+custom_proxy_group=Proxy`select`DIRECT`.*
+custom_proxy_group=🇭🇰 IPLC.VIP-香港自选`fallback`!!GROUPID=0!!(hk|港)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇺🇸 IPLC.VIP-美国自选`fallback`!!GROUPID=0!!(us|美)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇸🇬 IPLC.VIP-新加坡自选`fallback`!!GROUPID=0!!(sg|新)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇷🇺 IPLC.VIP-俄罗斯自选`fallback`!!GROUPID=0!!(ru|俄)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇹🇷 IPLC.VIP-土耳其自选`fallback`!!GROUPID=0!!(tr|土)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇭🇰 AmyTelecom-香港自选`fallback`!!GROUPID=1!!(hk|港)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇺🇸 AmyTelecom-美国自选`fallback`!!GROUPID=1!!(us|美)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🇸🇬 AmyTelecom-新加坡自选`fallback`!!GROUPID=1!!(sg|新)`http://www.gstatic.com/generate_204`180,5
+custom_proxy_group=🛑 广告拦截`select`REJECT`DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`DIRECT`Proxy`🇭🇰 IPLC.VIP-香港自选`🇺🇸 IPLC.VIP-美国自选`🇸🇬 IPLC.VIP-新加坡自选
 
 ;用于自定义重命名的选项 会覆盖 主程序目录中的配置文件 里的内容
 rename=!!GROUPID=0!!(^.*$)@IPLC.VIP-$1
